--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -101,25 +101,25 @@
     <div class="grid-container">
         <div class="grid-item">
             <a th:href="@{/electricityReg}">
-                <img th:src="@{/images/pexels-led-supermarket-577514.jpg}" alt="Electricity Registration">
+                <img th:src="@{/images/bulb.jpg}" alt="Electricity Registration">
             </a>
             <p>Report a problem with electricity grid</p>
         </div>
         <div class="grid-item">
             <a th:href="@{/leaksReg}">
-                <img th:src="@{/images/pexels2837863.jpg}" alt="Leaks Registration">
+                <img th:src="@{/images/water1.jpg}" alt="Leaks Registration">
             </a>
             <p>Report a water grid failure</p>
         </div>
         <div class="grid-item">
             <a th:href="@{/rubbishReg}">
-                <img th:src="@{/images/pexels-catherine-sheila-2409022(2).jpg}" alt="Rubbish Registration">
+                <img th:src="@{/images/plasticsand.jpg}" alt="Rubbish Registration">
             </a>
             <p>Report garbage & pollution</p>
         </div>
         <div class="grid-item">
             <a th:href="@{/pavementsReg}">
-                <img th:src="@{/images/pexels-pixabay-207204.jpg}" alt="Pavements Registration">
+                <img th:src="@{/images/pavement.jpg}" alt="Pavements Registration">
             </a>
             <p>Report problems with pavements</p>
         </div>
