--- a/src/main/resources/templates/reportSuccess.html
+++ b/src/main/resources/templates/reportSuccess.html
@@ -170,7 +170,7 @@
         body {
             font-family: 'Roboto', sans-serif;
             margin: 20px;
-            padding: 5;
+            padding: 5px;
             background-size: cover;
             background-position: center;
         }
