--- a/src/main/resources/templates/faultManagement.html
+++ b/src/main/resources/templates/faultManagement.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="navbar">
-    <h1>All Reports kindly submitted by all users</h1>
+    <h1>All reports submitted by all users</h1>
     <div class="user-info">
         <div class="username" th:text="${username}"></div>
         <div class="hamburger" onclick="toggleDropdown()">&#9776;</div>
