--- a/src/main/resources/templates/reportSuccess.html
+++ b/src/main/resources/templates/reportSuccess.html
@@ -40,7 +40,7 @@
 <div class="navbar">
     <h1>Failure Report Summary</h1>
     <div class="user-info">
-        <div class="username" th:text="${username}">Welcome, User!</div>
+        <div class="username" th:text="${username}"> </div>
         <div class="hamburger" onclick="toggleDropdown()">&#9776;</div>
         <div class="dropdown-content" id="dropdown-content">
             <a th:href="@{/my-reports}">My Reports</a> <!-- New tab link -->
