--- a/src/main/resources/templates/reportSuccess.html
+++ b/src/main/resources/templates/reportSuccess.html
@@ -54,7 +54,7 @@
 
 <div class="container mt-4">
     <div class="alert alert-success" role="alert">
-        <h4 class="alert-heading">Report Submitted Successfully!</h4>
+        <h4 class="alert-heading">report submitted successfully!</h4>
         <p>Here are the details of your submission:</p>
         <hr>
         <div th:if="${fault != null}">
@@ -93,7 +93,7 @@
 </div>
 
 <div style="text-align: center;">
-    <a th:href="@{/electricityReg}" class="back-button">Back to Main Menu</a>
+    <a th:href="@{/electricityReg}" class="back-button">back to main menu</a>
 </div>
 
 <script>
